<resources>
    <string name="app_name">Master USJ</string>
    <string name="first_option">First Option</string>
    <string name="second_option">Second Option</string>
    <string name="third_option">Third Option</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="action_bar_menu">Action bar</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="source">Source</string>
    <string name="external">External</string>
    <string name="internal">Internal</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="repeat">Loop</string>
    <string name="no_repeat">No Loop</string>
    <string name="pause_recording">Pause recording</string>
    <string name="play_recording">Play recording</string>
    <string name="start_recording">Start recording</string>
    <string name="ready">Ready</string>
    <string name="playing">Playing...</string>
    <string name="recording">Recording...</string>
</resources>